--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -11,15 +11,22 @@
         <a href="{{ url_for('previous',current_question = current_question) }}">Anterior</a>
         <form class="question_options">
             {% for answer_option in question.answer_options %}
-            <div>
-                <input type="radio" id="{{question.id}}_{{answer_option.id}}" name="question"/>
+            <div id="question_{{question.id}}_{{answer_option.id}}">
+                <input class="question_answer_option" type="radio" id="{{question.id}}_{{answer_option.id}}" name="question"/>
                 <span>  {{ answer_option.description }}</span>
             </div>
             {% endfor %}
         </form>
-        <a href="{{ url_for('next',current_question = current_question) }}">Prosseguir</a>
+        {% if next_question_exists%}
+            <a href="{{ url_for('next',current_question = current_question) }}">Prosseguir</a>
+        {% endif %}
     </div>
 
+    {% if not next_question_exists %}
+    <button id="show_results_button">
+        Mostrar resultado
+    </button>
+    {% endif %}
 </div>
 
 {% endblock %}
