--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -21,6 +21,13 @@
         Mostrar resultado
     </button>
 
+    <p id="warning_of_not_answered" class="hidden_warning_of_not_answered">
+        Há perguntas que não foram respondidas
+    </p>
+
+    <p id="content_feedback" class="hidden_content_feedback">
+
+    </p>
 </div>
 
 {% endblock %}
