dialog de confirmação de sáida da página

--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -8,13 +8,17 @@
     <h2 id="question_text"></h2>
 
     <div class="container_questions">
-        <button id="button_previous_question">Anterior</button>
+        <span>
+              <button type="button" class="btn btn-primary" id="button_previous_question">Anterior</button>
+        </span>
 
-        <form class="question_options" id="question_options">
+        <form  class="question_options" id="question_options">
 
         </form>
 
-        <button id="button_next_question">Próxima</button>
+        <span>
+             <button type="button" class="btn btn-primary" id="button_next_question">Próxima</button>
+        </span>
     </div>
 
     <button id="show_results_button">
