singleton de acesso aos dados, factory servindo para retornar quiz com outros temas

--- a/static/app.css
+++ b/static/app.css
@@ -1,7 +1,8 @@
 
 .container_questions {
     display: flex;
-    min-width: 850px !important;
+    justify-content: space-between;
+    min-width: 550px;
 }
 
 .question_answer_option{
