aplicação de dto, além dos já implementados factory e singleton, começando a estilizar melhor

--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -2,10 +2,9 @@
 
 {% block content %}
 
-<h1>QUIZ</h1>
-
-<div class="container">
-    <h2 id="question_text"></h2>
+<div class="container hide card-body" id="container_quiz">
+    <h2 id="title_quiz">QUIZ</h2>
+    <h3 id="question_text"></h3>
 
     <div class="container_questions">
         <span>
