quiz de programação

--- a/templates/template.html
+++ b/templates/template.html
@@ -18,6 +18,7 @@
         {% block content %} {% endblock %}
     </div>
 
+    <span id="quiz_was_not_selected_message">Escolha um quiz acima</span>
      <script type="text/javascript" src="{{ url_for('static', filename='jquery.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='aux_content.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='app.js') }}"></script>
