--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -7,21 +7,27 @@
     <h3 id="question_text"></h3>
 
     <div class="container_questions">
-        <span>
-              <button type="button" class="btn btn-primary" id="button_previous_question">Anterior</button>
-        </span>
+<!--        <span>-->
+<!--              <button type="button" class="btn btn-primary" id="button_previous_question">Anterior</button>-->
+<!--        </span>-->
+        <div id="container_question_indication" class="container_question_indication">
+
+        </div>
 
         <form  class="question_options" id="question_options">
 
         </form>
 
-        <span>
-             <button type="button" class="btn btn-primary" id="button_next_question">Próxima</button>
-        </span>
+<!--        <span>-->
+<!--             <button type="button" class="btn btn-primary" id="button_next_question">Próxima</button>-->
+<!--        </span>-->
     </div>
 
     <button id="show_results_button">
         Mostrar resultado
+    </button>
+    <button id="restart_quiz_button">
+        Repetir
     </button>
 
     <p id="warning_of_not_answered" class="hidden_warning_of_not_answered">
