--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -23,10 +23,10 @@
 <!--        </span>-->
     </div>
 
-    <button id="show_results_button">
+    <button class="btn btn-primary show_results_button" id="show_results_button">
         Mostrar resultado
     </button>
-    <button id="restart_quiz_button">
+    <button class="btn btn-primary restart_quiz_button" id="restart_quiz_button">
         Repetir
     </button>
 
@@ -34,7 +34,7 @@
         Há perguntas que não foram respondidas
     </p>
 
-    <p id="content_feedback" class="hidden_content_feedback">
+    <p id="content_feedback" class="hidden_content_feedback alert alert-light">
 
     </p>
 </div>
